--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,13 +1,39 @@
-Package       Version
-------------- -------
-click         8.1.7
-colorama      0.4.6
-Flask         2.2.5
-itsdangerous  2.0.1
-Jinja2        3.1.3
-MarkupSafe    2.1.3
-pip           23.3.1
-python-dotenv 0.21.0
-setuptools    68.2.2
-Werkzeug      2.3.8
-wheel         0.41.2
+annotated-types==0.6.0
+cachetools==5.3.3
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/click_1699473800648/work
+colorama @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/colorama_1699472650914/work
+Flask @ file:///C:/b/abs_efc024w7fv/croot/flask_1702980041157/work
+google-ai-generativelanguage==0.6.1
+google-api-core==2.18.0
+google-api-python-client==2.125.0
+google-auth==2.29.0
+google-auth-httplib2==0.2.0
+google-generativeai==0.5.0
+googleapis-common-protos==1.63.0
+grpcio==1.62.1
+grpcio-status==1.62.1
+httplib2==0.22.0
+idna==3.7
+itsdangerous @ file:///tmp/build/80754af9/itsdangerous_1621432558163/work
+Jinja2 @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/jinja2_1707426091452/work
+MarkupSafe @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/markupsafe_1707425732791/work
+pillow==10.3.0
+proto-plus==1.23.0
+protobuf==4.25.3
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pydantic==2.7.0
+pydantic_core==2.18.1
+pyparsing==3.1.2
+python-dotenv @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/python-dotenv_1699475097728/work
+requests==2.31.0
+rsa==4.9
+setuptools==68.2.2
+tqdm==4.66.2
+typing_extensions==4.11.0
+uritemplate==4.1.1
+urllib3==2.2.1
+Werkzeug @ file:///C:/b/abs_3901hwqcw0/croot/werkzeug_1706210134718/work
+wheel==0.41.2
