--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@types/react-typist": "^2.0.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "next": "14.2.1",
+    "nextjs-simple-typewriter": "^5.2.2",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.2",
