--- a/package.json
+++ b/package.json
@@ -16,10 +16,15 @@
     "@types/react-typist": "^2.0.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "filepond": "^4.31.1",
+    "filepond-plugin-image-exif-orientation": "^1.0.11",
+    "filepond-plugin-image-preview": "^4.6.12",
+    "filepond-plugin-media-preview": "^1.0.11",
     "next": "14.2.1",
     "nextjs-simple-typewriter": "^5.2.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-filepond": "^7.1.2",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -27,6 +32,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-filepond": "^7.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
