--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nextjs-simple-typewriter": "^5.2.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-drag-drop-files": "^2.3.10",
     "react-filepond": "^7.1.2",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7"
